fixes to alignment of multiselect admin boxes

--- a/frontend/source/sass/admin/changelists.scss
+++ b/frontend/source/sass/admin/changelists.scss
@@ -76,3 +76,8 @@ th.action-checkbox-column {
     display: none;
   }
 }
+
+/* users and groups multiselect form */
+.related-widget-wrapper {
+  width: 100%;
+}
